data/derived/comb/progs/unify/prog1552.ml.out
Characters 31-32:
  let f a x = (a^2)::x  in
                 ^
Error: This expression has type int but an expression was expected of type
         string
